--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,10 @@ nav{
   height: 100px;
   position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
   z-index: 10;
+  box-shadow: 0px 5px 5px #EEEEEE;
 }
 
 .navGrid{
@@ -25,7 +27,7 @@ nav{
 .ld-logo{
   float: left;
   overflow: auto;
-  height: 90px;
+  height: 80px;
   cursor: pointer;
 
 }
@@ -63,7 +65,7 @@ nav{
 .contentArea{
   /* border: 1px solid red; */
   display: block;
-  margin: 90px 250px 0px 250px;
+  margin: 120px 250px 0px 250px;
   /* height: 1200px; */
 }
 
@@ -78,7 +80,7 @@ h1 {
   font-family: 'Roboto', sans-serif;
   font-weight: bold;
   color: #505050;
-  margin: 0px 0px 20px 0px;
+  margin: 0px 0px 10px 0px;
   transform: translateX(-5px);
 }
 
@@ -88,6 +90,7 @@ h2 {
   font-weight: bold;
   color: #199FFF;
   padding-left: 0px;
+  margin-top: 0px;
 }
 
 p{
@@ -95,25 +98,67 @@ p{
   font-family: 'Roboto', sans-serif;
   color: #505050;
   padding-left: 0px;
+  line-height: 150%;
+  margin-top: 0px;
+  margin-bottom: 40px;
 }
 
 .buttonContainer{
   margin-top: 50px;
-  margin-bottom: 60px;
+  margin-bottom: 70px;
   display: flex;
   justify-content: center;
+}
+
+.skills{
+  display: inline-block;
+  width: 20%;
+  margin-left: 0px;
+  margin-right: 30px;
+  margin-bottom: 40px;
+  /* border: 1px solid red; */
+}
+
+.jobList{
+  font-size: 14px;
+  font-family: 'Roboto', sans-serif;
+  list-style-position: inside;
+  color: #505050;
+  padding-left: 0px;
+  line-height: 150%;
+  margin-top: 0px;
+  margin-bottom: 20px;
+}
+
+#lastJob{
+  margin-bottom: 40px;
+}
+
+.noBullets{
+  list-style-type: none;
+}
+
+.skillsList{
+  margin: 0 auto;
+  list-style-type: none;
+  font-family: 'Roboto', sans serif;
+  font-size: 14px;
+  line-height: 150%;
+  color: #505050;
+  padding: 0px;
 }
 
 button{
   height: 40px;
   width: 120px;
   color: white;
-  background-color: orange;
+  background-color: #f08f08;
   display: inline-block;
   border-radius: 7px;
   text-align: center;
   border: 0px;
   font-size: 14px;
+  font-weight: bold;
   cursor: pointer;
   margin-left: 10px;
   margin-right: 10px;
@@ -146,4 +191,8 @@ footer li {
   padding-left: 10px;
   padding-right: 10px;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 600px){
+  
 }
