--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ nav{
   margin: 10px 100px 0px 100px;
   grid-template-rows: 90px;
   grid-template-columns: 150px auto;
+  padding: 5px;
 }
 
 .logo{
