--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ nav{
 
 .navGrid{
   display:grid;
-  margin: 10px 100px 0px 100px;
+  margin: 10px 0px 0px 100px;
   grid-template-rows: 90px;
   grid-template-columns: 150px auto;
   padding: 5px;
@@ -113,7 +113,7 @@ p{
 
 .skills{
   display: inline-block;
-  width: 20%;
+  width: 130px;
   margin-left: 0px;
   margin-right: 30px;
   margin-bottom: 40px;
@@ -123,9 +123,9 @@ p{
 .jobList{
   font-size: 14px;
   font-family: 'Roboto', sans-serif;
-  list-style-position: inside;
+  list-style-position: outside;
   color: #505050;
-  padding-left: 0px;
+  padding-left: 15px;
   line-height: 150%;
   margin-top: 0px;
   margin-bottom: 20px;
@@ -137,6 +137,7 @@ p{
 
 .noBullets{
   list-style-type: none;
+  text-indent: -15px;
 }
 
 .skillsList{
@@ -194,6 +195,38 @@ footer li {
   cursor: pointer;
 }
 
+@media only screen and (max-width: 840px){
+  .navGrid{
+    margin-left: 0px;
+    grid-template-columns: 100px auto;
+  }
+  .contentArea{
+    margin-left:100px;
+    margin-right:100px;
+  }
+  .skills{
+    margin-right: 20px;
+  }
+}
+
 @media only screen and (max-width: 600px){
-  
+  .navGrid{
+    margin-left: 0px;
+    margin-top: 1px;
+    height: 50px;
+    grid-template-columns: 70px auto;
+    grid-template-rows: 50px;
+  }
+  .contentArea{
+    margin: 60px 20px 0px 70px;
+  }
+  .skills{
+    margin-right: 20px;
+  }
+  .ld-logo{
+    height: 50px;
+  }
+nav{
+  height: 60px;
+  }
 }
